<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.0.RELEASE</version>
        <relativePath/>
    </parent>

    <groupId>no.nav</groupId>
    <artifactId>veilarbperson</artifactId>
    <version>1</version>
    <name>veilarbperson</name>
    <description>API for uthenting av informasjon om brukere</description>

    <properties>
        <java.version>11</java.version>
        <common.version>2.2020.09.18_09.04-36b7925810ee</common.version>
        <springfox.version>2.9.2</springfox.version>
        <tjenestespesifikasjoner.version>1.2019.09.25-00.21-49b69f0625e0</tjenestespesifikasjoner.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <finalName>veilarbperson</finalName>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>2.8.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>${springfox.version}</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>${springfox.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>3.14.7</version>
        </dependency>

        <!-- Consumer  -->
        <dependency>
            <groupId>no.nav.tjenestespesifikasjoner</groupId>
            <artifactId>person-v3-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikasjoner.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.tjenestespesifikasjoner</groupId>
            <artifactId>egenansatt-v1-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikasjoner.version}</version>
        </dependency>

        <!-- Common Dependencies -->
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>json</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>client</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>cxf</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>util</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>abac</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>sts</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>auth</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>log</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>health</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>feature-toggle</artifactId>
            <version>${common.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>test</artifactId>
            <version>${common.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-standalone</artifactId>
            <version>2.26.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>no.bekk.bekkopen</groupId>
            <artifactId>nocommons</artifactId>
            <version>0.9.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
